--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* General styles */
-body {
+/* body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-  }
+  } */
   
   /* Gallery layout */
   .gallery {
